# rps-limiter

./: .gitignore  Makefile  README.md  example.config.yaml  example.env  pyproject.toml
src/: ioc.py  main.py
src/application/: main.py
src/application/services/: __init__.py  decision_maker.py  logs_processor.py  model_load_monitor.py  publisher.py  rps_controller.py
src/application/services/service_clients/: __init__.py  base.py  booking.py  clients.py  entrypoint.py  model_dispatcher.py  model_registry.py  notificator.py  prometheus.py
src/application/workers/: __init__.py  fetch_and_process.py  logs_processor.py
src/core/: __init__.py  broker.py
src/core/configurations/: __init__.py  config.py
src/core/configurations/config/: __init__.py  config.py
src/core/configurations/dishka/: __init__.py  dishka.py
src/core/configurations/fastapi/: __init__.py  fastapi.py
src/core/configurations/faststream/: __init__.py  faststream.py  router.py
src/core/configurations/httpx/: __init__.py  client.py
src/core/configurations/postgres/: __init__.py  manager.py
src/domain/dto/: __init__.py  book.py  booking.py  events.py  metric.py  model.py  scale.py
src/domain/events/: __init__.py  events.py
src/domain/exceptions/: __init__.py  prometheus.py  worker.py
src/domain/interfaces/: __init__.py  decision_maker.py  model_load_monitor.py  publisher.py
src/infrastructure/rabbit/: __init__.py  publisher.py
yaml-examples/: booking_swagger.yaml  entrypoint_metrics.txt  model_dispatcher_swagger.yaml  model_registry_swagger.yaml  swagger.yaml
(+13 files in other folders)
