[tool.poetry]
name = "rps-limiter"
version = "0.1.0"
description = ""
authors = ["Maxim Vasilyev <mayxis@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
faststream = "^0.6.5"
sqlalchemy = "^2.0.45"
asyncpg = "^0.31.0"
alembic = "^1.18.1"
pydantic = "^2.12.5"
dishka = "^1.7.2"
loguru = "^0.7.3"
prometheus-client = "^0.24.1"
aiohttp = "^3.13.3"
uvicorn = "^0.40.0"
pyyaml = "^6.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
